# rever

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_SELF_HOSTED.md  LICENSE  README.md  build.sh  build.yaml  docker-compose-local.yaml  docker-compose.yaml  package.json  setup-git-hooks.sh
api/: .env.example  .env.example.local  .env.selfhosted.example  Dockerfile.api  README.md  manage.py  pyproject.toml  requirements.txt
api/rever/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
api/rever/app/: apps.py
api/rever/app/permissions/: __init__.py  decorators.py  organization.py
api/rever/app/serializers/: __init__.py  approval.py  attachment.py  auth.py  match.py  notification.py  payable.py
api/rever/app/urls/: __init__.py  approval.py  attachment.py  audit.py  auth.py  notification.py  payable.py
api/rever/app/views/: __init__.py  base.py  base_viewsets.py
api/rever/bgtasks/: __init__.py  approval_email_task.py  approval_status_email_task.py  apps.py  bill_summary_task.py  invitation_email_task.py  match_task.py  monthly_bill_summary_task.py  otp_email_task.py
api/rever/db/: apps.py  mixins.py  signals.py
api/rever/db/migrations/: 0001_initial.py  0002_alter_verificationtoken_purpose.py  0003_user_role.py  0004_alter_organization_options_organization_currency_and_more.py  0005_remove_organization_currency_and_more.py  0006_alter_user_options_alter_verificationtoken_options_and_more.py  0007_alter_address_city_alter_address_country_and_more.py  0008_alter_user_role.py  0009_user_invited_by_alter_user_role.py  0010_approvalaction_comment_alter_bill_status.py  0011_approvalaction_action_type.py  0012_approvalaction_approval_sent_at_and_more.py  0013_alter_approvalaction_unique_together.py  0014_alter_bill_payment_terms.py  0015_alter_organization_currency_and_more.py  0016_usernotificationsetting.py  0017_alter_approvalassignment_approver.py  0018_alter_bill_payment_terms_alter_vendor_payment_terms.py  0019_user_invited_at.py  0020_alter_bill_payment_terms_alter_vendor_payment_terms.py  0021_address_created_at_address_created_by_and_more.py  0022_remove_attachment_uploaded_at_and_more.py  0023_alter_organization_id.py  0025_usernotificationpreference_and_more.py  0026_alter_approvalassignment_unique_together_and_more.py  0027_alter_usernotificationpreference_user.py  0028_organization_business_type_organization_email_and_more.py  0029_organization_address.py  0030_bankaccount_vendor_bank_account.py  0031_purchaseorder_purchaseorderitem_and_more.py  0032_bill_purchase_order.py  0033_historicaladdress_historicalapprovalconfig_and_more.py  0034_bill_is_attachment_historicalbill_is_attachment.py  0035_historicalpurchaseorder_is_attachment_and_more.py  0039_purchaseordercounter.py  (+21 more)
api/rever/middleware/: apps.py  logger.py
api/rever/utils/: approval_constants.py  bill_constants.py  cache.py  date_format.py  embedding.py  exception_logger.py  ip_address.py  match.py  mixins.py  payable_constants.py  storage_backends.py  workflows.py
nginx/: Dockerfile  (+1 more)
(+76 files in other folders)
